# rabbitmq-lqt

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  ChangeLog.md  README.md
.config/: nextest.toml
.github/workflows/: ci.yaml  release.yaml  release.yml  verify-packages.yaml
crates/rabbitmq-lqt-cli/: Cargo.toml
crates/rabbitmq-lqt-cli/src/: archive.rs  cli.rs  commands.rs  completions.rs  errors.rs  main.rs  output.rs
crates/rabbitmq-lqt-cli/tests/: help_unit_tests.rs  obfuscate_unit_tests.rs  progress_bar_unit_tests.rs  ql_unit_tests.rs  query_unit_tests.rs  shell_completions_proptests.rs  shell_completions_tests.rs  tail_unit_tests.rs
crates/rabbitmq-lqt-cli/tests/proptests/: main.rs  shell_completions_proptests.rs
crates/rabbitmq-lqt-cli/tests/unit/: help_unit_tests.rs  main.rs  merge_unit_tests.rs  obfuscate_unit_tests.rs  parse_unit_tests.rs  progress_bar_unit_tests.rs  ql_unit_tests.rs  query_unit_tests.rs  shell_completions_tests.rs  tail_unit_tests.rs
crates/rabbitmq-lqt-lib/: Cargo.toml
crates/rabbitmq-lqt-lib/benches/: parse_annotate_store.rs
crates/rabbitmq-lqt-lib/src/: constants.rs  filter.rs  lib.rs  parser.rs
crates/rabbitmq-lqt-lib/tests/: access_control_annotator_unit_tests.rs  access_control_label_unit_tests.rs  access_control_subsystem_unit_tests.rs  amqp10_subsystem_unit_tests.rs  annotation_pipeline_unit_tests.rs  auto_delete_annotator_unit_tests.rs  auto_delete_label_unit_tests.rs  boot_subsystem_unit_tests.rs  channel_exceptions_label_unit_tests.rs  channel_tracking_label_unit_tests.rs  (+77 more)
crates/rabbitmq-lqt-obfuscation/: Cargo.toml
crates/rabbitmq-lqt-ql/: Cargo.toml
crates/rabbitmq-lqt-ql-core/: Cargo.toml
crates/rabbitmq-lqt-ql-wasm/: Cargo.toml
crates/rabbitmq-lqt-ql/src/: builder.rs  compiler.rs  errors.rs  lib.rs
crates/rabbitmq-lqt-ql/tests/: autocomplete_unit_tests.rs  builder_unit_tests.rs  error_messages_unit_tests.rs  integration_tests.rs  preset_unit_tests.rs
crates/rabbitmq-lqt-ql/tests/unit/: builder_unit_tests.rs  compiler_unit_tests.rs  main.rs  parser_unit_tests.rs  preset_unit_tests.rs
crates/rabbitmq-lqt-ui/: Cargo.toml  README.md  build.rs
crates/rlqt-cli/: Cargo.toml
crates/rlqt-cli/src/: archive.rs  cli.rs  commands.rs  completions.rs  core.rs  errors.rs  main.rs  output.rs
crates/rlqt-cli/tests/: help_unit_tests.rs  merge_unit_tests.rs  parse_unit_tests.rs  ql_unit_tests.rs  shell_completions_tests.rs  test_helpers.rs
crates/rlqt-cli/tests/fixtures/compressed/: fixtures34.log.tar.xz
crates/rlqt-cli/wix/: main.wxs
crates/rlqt-lib/: Cargo.toml
crates/rlqt-lib/benches/: parse_annotate_store.rs
crates/rlqt-lib/src/: constants.rs  datetime.rs  errors.rs  lib.rs  parser.rs  severity.rs
crates/rlqt-lib/src/entry_metadata/: doc_url_annotators.rs  label_annotators.rs  labels.rs  mod.rs  shared.rs  subsystem_annotators.rs  subsystems.rs
crates/rlqt-lib/src/file_set_metadata/: mod.rs
crates/rlqt-lib/src/rel_db/: file_metadata.rs  mod.rs  node_log_entry.rs
crates/rlqt-lib/tests/: access_control_annotator_unit_tests.rs  access_control_label_unit_tests.rs  access_control_subsystem_unit_tests.rs  amqp10_subsystem_unit_tests.rs  annotation_pipeline_unit_tests.rs  annotator_unit_tests.rs  auto_delete_annotator_unit_tests.rs  auto_delete_label_unit_tests.rs  boot_subsystem_unit_tests.rs  channel_errors_annotator_unit_tests.rs  channel_exceptions_annotator_unit_tests.rs  channel_exceptions_label_unit_tests.rs  channel_tracking_label_unit_tests.rs  channels_subsystem_unit_tests.rs  classic_queues_label_unit_tests.rs  classic_queues_subsystem_unit_tests.rs  clustering_label_unit_tests.rs  clustering_labels_unit_tests.rs  clustering_subsystem_unit_tests.rs  connections_access_control_label_unit_tests.rs  connections_annotator_unit_tests.rs  connections_subsystem_unit_tests.rs  connections_tracking_label_unit_tests.rs  consumers_label_unit_tests.rs  database_integration_tests.rs  definitions_label_unit_tests.rs  delete_annotator_unit_tests.rs  delete_label_unit_tests.rs  deprecated_features_label_unit_tests.rs  erlang_otp_subsystem_unit_tests.rs  exchanges_subsystem_unit_tests.rs  exclusive_annotator_unit_tests.rs  exclusive_label_unit_tests.rs  feature_flags_label_unit_tests.rs  federation_label_unit_tests.rs  federation_plugin_subsystem_unit_tests.rs  file_set_annotators_tests.rs  http_label_unit_tests.rs  khepri_label_unit_tests.rs  label_annotators_integration_unit_tests.rs  (+58 more)
crates/rlqt-obfuscation/: Cargo.toml
crates/rlqt-obfuscation/benches/: obfuscation.rs
crates/rlqt-obfuscation/src/: lib.rs  obfuscator.rs
crates/rlqt-obfuscation/tests/: obfuscator_unit_tests.rs
crates/rlqt-ql/: Cargo.toml
crates/rlqt-ql-core/: Cargo.toml
crates/rlqt-ql-core/src/: ast.rs  autocomplete.rs  errors.rs  lib.rs  parser.rs  presets.rs
crates/rlqt-ql-wasm/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
crates/rlqt-ql-wasm/src/: lib.rs
crates/rlqt-ql/src/: builder.rs  compiler.rs  errors.rs  lib.rs  parser.rs  presets.rs
crates/rlqt-ql/tests/: autocomplete_unit_tests.rs  builder_unit_tests.rs  compiler_unit_tests.rs  error_messages_unit_tests.rs  integration_tests.rs  parser_unit_tests.rs  preset_unit_tests.rs
crates/rlqt-ui/: Cargo.toml  README.md  build.rs
crates/rlqt-ui/frontend/: package-lock.json  package.json  vite.config.ts
crates/rlqt-ui/frontend/src/: App.tsx  main.tsx
crates/rlqt-ui/frontend/src/api/: client.ts
crates/rlqt-ui/frontend/src/components/: ErrorBoundary.tsx  FileMetadataTab.tsx  FilterPanel.tsx  LogTable.tsx  MetadataHeader.tsx  QLPanel.tsx
crates/rlqt-ui/frontend/src/wasm/: qlValidator.ts
crates/rlqt-ui/frontend/src/wasm/pkg/: package.json  rlqt_ql_wasm.d.ts  rlqt_ql_wasm.js  rlqt_ql_wasm_bg.wasm.d.ts
crates/rlqt-ui/src/: cli.rs  errors.rs  lib.rs  main.rs  server.rs
crates/rlqt-ui/src/api/: logs.rs  metadata.rs
crates/rlqt-ui/tests/: api_metadata_tests.rs  api_ql_tests.rs  cli_tests.rs  datetime_parsing_tests.rs
docs/: rabbitmq_lqt_trusted_publishing.md
scripts/: extract-changelog.nu  release-linux.nu  release-macos.nu  release-windows.nu
(+131 files in other folders)
