[workspace]
members = ["crates/rlqt-lib", "crates/rlqt-cli", "crates/rlqt-ui", "crates/rlqt-obfuscation", "crates/rlqt-ql", "crates/rlqt-ql-core", "crates/rlqt-ql-wasm"]
resolver = "3"

[workspace.package]
version = "0.19.0"
edition = "2024"
license = "MPL-2.0"
authors = ["Michael S. Klishin and Contributors"]
repository = "https://github.com/michaelklishin/rabbitmq-lqt"
homepage = "https://github.com/michaelklishin/rabbitmq-lqt"
keywords = ["rabbitmq", "logs", "annotation-tools"]
categories = ["command-line-utilities", "parsing"]

[workspace.dependencies]
clap = { version = "4.5", features = ["help", "color", "cargo", "env", "derive"] }
anyhow = "1.0"
thiserror = "2.0"
sysexits = "0.10"
bel7-cli = { version = "0.8", features = ["completions", "errors", "progress", "tables"] }
bel7-axum = { version = "0.1", features = ["embed"] }
tabled = { version = "0.20", features = ["ansi"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"
nom = "8.0"
log = "0.4"
fern = "0.7"
terminal_size = "0.4"
owo-colors = "4.2"
regex = "1.12"
bitflags = "2.10"
indicatif = "0.18"
num_enum = "0.7"
strum = { version = "0.27", features = ["derive"] }

duckdb = { version = "1.4", features = ["bundled"] }
r2d2 = "0.8"
clap_complete = "4.5"
clap_complete_nushell = "4.5"
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"
criterion = { version = "0.8", features = ["async_tokio"] }
rayon = "1.11"
proptest = "1.9"
flate2 = "1.1"
lzma-rs = "0.3"
tar = "0.4"
tempfile = "3"

[workspace.lints.clippy]
uninlined_format_args = "allow"
collapsible_if = "allow"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.ci]
inherits = "release"
opt-level = "s"
strip = true
