[package]
name = "rabbitmq-lqt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI tool for parsing, annotating, and querying RabbitMQ log files"
exclude = ["tests/fixtures/"]

[[bin]]
name = "rabbitmq-lqt"
path = "src/main.rs"

[features]
default = ["web-ui"]
web-ui = ["dep:rabbitmq-lqt-ui"]
mimalloc = ["dep:mimalloc"]

[dependencies]
rabbitmq-lqt-lib = { version = "0.20.0", path = "../rabbitmq-lqt-lib" }
rabbitmq-lqt-obfuscation = { version = "0.20.0", path = "../rabbitmq-lqt-obfuscation" }
rabbitmq-lqt-ql = { version = "0.20.0", path = "../rabbitmq-lqt-ql" }
rabbitmq-lqt-ui = { version = "0.20.0", path = "../rabbitmq-lqt-ui", optional = true }
clap = { workspace = true }
bel7-cli = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
chrono = { workspace = true }
chrono-english = { workspace = true }
duckdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
owo-colors = { workspace = true }
rayon = { workspace = true }
flate2 = { workspace = true }
lzma-rs = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
mimalloc = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = { workspace = true }
tempfile = "3"
