[package]
name = "rabbitmq-lqt-ql"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Query language parser for RabbitMQ Log Querying Tools"

[lib]
name = "rabbitmq_lqt_ql"
path = "src/lib.rs"

[dependencies]
rabbitmq-lqt-ql-core = { version = "0.20.0", path = "../rabbitmq-lqt-ql-core" }
thiserror = { workspace = true }
chrono = { workspace = true }
chrono-english = { workspace = true }
regex = { workspace = true }
rabbitmq-lqt-lib = { version = "0.20.0", path = "../rabbitmq-lqt-lib" }

[dev-dependencies]
tempfile = "3"
proptest = { workspace = true }
duckdb = { workspace = true }

[lints]
workspace = true
