[package]
name = "rlqt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "rabbitmq-lqt"
path = "src/main.rs"

[dependencies]
rlqt-lib = { path = "../rlqt-lib" }
clap = { workspace = true }
sysexits = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
chrono = { workspace = true }
chrono-english = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
terminal_size = { workspace = true }
owo-colors = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
