[package]
name = "rlqt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI tool for parsing, annotating, and querying RabbitMQ log files"

[[bin]]
name = "rabbitmq-lqt"
path = "src/main.rs"

[dependencies]
rlqt-lib = { version = "0.12.0", path = "../rlqt-lib" }
rlqt-ui = { path = "../rlqt-ui" }
clap = { workspace = true }
sysexits = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
chrono = { workspace = true }
chrono-english = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
terminal_size = { workspace = true }
owo-colors = { workspace = true }
futures = { workspace = true }
rayon = { workspace = true }
indicatif = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
