[package]
name = "rlqt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI tool for parsing, annotating, and querying RabbitMQ log files"
exclude = ["tests/fixtures/"]

[[bin]]
name = "rabbitmq-lqt"
path = "src/main.rs"

[features]
default = ["web-ui"]
web-ui = ["dep:rlqt-ui"]

[dependencies]
rlqt-lib = { version = "0.18.0", path = "../rlqt-lib" }
rlqt-obfuscation = { version = "0.18.0", path = "../rlqt-obfuscation" }
rlqt-ql = { version = "0.18.0", path = "../rlqt-ql" }
rlqt-ui = { path = "../rlqt-ui", optional = true }
clap = { workspace = true }
bel7-cli = { workspace = true }
tabled = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
chrono = { workspace = true }
chrono-english = { workspace = true }
duckdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
terminal_size = { workspace = true }
owo-colors = { workspace = true }
rayon = { workspace = true }
indicatif = { workspace = true }
flate2 = { workspace = true }
lzma-rs = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
