[package]
name = "rlqt-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core library for parsing and annotating RabbitMQ log files"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-english = { workspace = true }
thiserror = { workspace = true }
nom = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
bitflags = { workspace = true }
num_enum = { workspace = true }
strum = { workspace = true }

sea-orm = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = "3.0"
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "parse_annotate_store"
harness = false
