[package]
name = "rlqt-obfuscation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Log obfuscation library for RabbitMQ Log Querying Tools"

[lib]
name = "rlqt_obfuscation"
path = "src/lib.rs"

[dependencies]
regex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "obfuscation"
harness = false
