[package]
name = "rlqt-ql-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebAssembly bindings for RLQT Query Language parser"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rlqt-ql-core = { path = "../rlqt-ql-core" }
wasm-bindgen = "0.2"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints]
workspace = true
