[package]
name = "rlqt-ql"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Query language parser for RabbitMQ Log Querying Tools"

[lib]
name = "rlqt_ql"
path = "src/lib.rs"

[dependencies]
rlqt-ql-core = { path = "../rlqt-ql-core" }
thiserror = { workspace = true }
chrono = { workspace = true }
chrono-english = { workspace = true }
regex = { workspace = true }
rlqt-lib = { version = "0.15.0", path = "../rlqt-lib" }

[dev-dependencies]
tempfile = "3"
proptest = { workspace = true }
duckdb = { workspace = true }

[lints]
workspace = true
