[package]
name = "rlqt-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Web UI for RabbitMQ Log Querying Tools"
include = [
    "src/**/*",
    "build.rs",
    "Cargo.toml",
    "frontend/dist/**/*",
    "frontend/src/wasm/pkg/*.wasm",
    "frontend/src/wasm/pkg/*.js",
    "frontend/src/wasm/pkg/*.d.ts",
    "frontend/src/wasm/pkg/package.json",
]

[lib]
name = "rlqt_ui"
path = "src/lib.rs"

[dependencies]
rlqt-lib = { version = "0.18.0", path = "../rlqt-lib" }
rlqt-ql = { version = "0.18.0", path = "../rlqt-ql" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
duckdb = { workspace = true }
log = { workspace = true }
fern = { workspace = true }
chrono = { workspace = true }
chrono-english = { workspace = true }
thiserror = { workspace = true }

axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
bel7-axum = { workspace = true }
rust-embed = "8"
opener = "0.8"

[dev-dependencies]
tempfile = "3"
